# g4hepem

./: .gitignore  .readthedocs.yml  CMakeLists.txt  README.md
G4HepEm/: CMakeLists.txt
G4HepEm/G4HepEm/: CMakeLists.txt
G4HepEm/G4HepEm/include/: G4HepEmConfig.hh  G4HepEmProcess.hh  G4HepEmRunManager.hh  G4HepEmTrackingManager.hh  G4HepEmWoodcockHelper.hh
G4HepEm/G4HepEm/src/: G4EmTrackingManager.cc  G4HepEmConfig.cc  G4HepEmProcess.cc  G4HepEmRunManager.cc  G4HepEmTrackingManager.cc  G4HepEmWoodcockHelper.cc  TrackingManagerHelper.icc
G4HepEm/G4HepEmData/: CMakeLists.txt
G4HepEm/G4HepEmData/include/: G4HepEmCuUtils.hh  G4HepEmData.hh  G4HepEmElectronData.hh  G4HepEmElementData.hh  G4HepEmGSTableData.hh  G4HepEmGammaData.hh  G4HepEmMatCutData.hh  G4HepEmMaterialData.hh  G4HepEmParameters.hh  G4HepEmSBTableData.hh  G4HepEmSerialization.hh  G4HepEmState.hh
G4HepEm/G4HepEmData/src/: G4HepEmData.cc  G4HepEmData.cu  G4HepEmElectronData.cc  G4HepEmElectronData.cu  G4HepEmElementData.cc  G4HepEmElementData.cu  G4HepEmGSTableData.cc  G4HepEmGammaData.cc  G4HepEmJsonSerialization.hh  G4HepEmMatCutData.cc  G4HepEmMatCutData.cu  G4HepEmMaterialData.cc  G4HepEmMaterialData.cu  G4HepEmParameters.cc  G4HepEmSBTableData.cc  G4HepEmSBTableData.cu  G4HepEmSerialization.cc
G4HepEm/G4HepEmDataJsonIO/: CMakeLists.txt
G4HepEm/G4HepEmDataJsonIO/include/: G4HepEmDataJsonIO.hh
G4HepEm/G4HepEmDataJsonIO/src/: G4HepEmDataJsonIO.cc  G4HepEmDataJsonIOImpl.hh
G4HepEm/G4HepEmInit/: CMakeLists.txt
G4HepEm/G4HepEmInit/include/: G4HepEmElectronInit.hh  G4HepEmElectronTableBuilder.hh  G4HepEmGSPWACorTableBuilder.hh  G4HepEmGSTableBuilder.hh  G4HepEmGammaInit.hh  G4HepEmGammaTableBuilder.hh  G4HepEmInitUtils.hh  G4HepEmMaterialInit.hh  G4HepEmParametersInit.hh  G4HepEmSBBremTableBuilder.hh  G4HepEmStateInit.hh
G4HepEm/G4HepEmInit/src/: G4HepEmElectronInit.cc  G4HepEmElectronTableBuilder.cc  G4HepEmGSPWACorTableBuilder.cc  G4HepEmGSTableBuilder.cc  G4HepEmGammaInit.cc  G4HepEmGammaTableBuilder.cc  G4HepEmInitUtils.cc  G4HepEmMaterialInit.cc  G4HepEmParametersInit.cc  G4HepEmSBBremTableBuilder.cc  G4HepEmStateInit.cc
G4HepEm/G4HepEmRun/: CMakeLists.txt
G4HepEm/G4HepEmRun/include/: G4HepEmConstants.hh  G4HepEmElectronEnergyLossFluctuation.hh  G4HepEmElectronEnergyLossFluctuation.icc  G4HepEmElectronInteractionBrem.hh  G4HepEmElectronInteractionBrem.icc  G4HepEmElectronInteractionBremSB.hh  G4HepEmElectronInteractionIoni.hh  G4HepEmElectronInteractionIoni.icc  G4HepEmElectronInteractionMSC.hh  G4HepEmElectronInteractionMSC.icc  G4HepEmElectronInteractionUMSC.hh  G4HepEmElectronInteractionUMSC.icc  G4HepEmElectronManager.hh  G4HepEmElectronManager.icc  G4HepEmElectronTrack.hh  G4HepEmExp.hh  G4HepEmGammaInteractionCompton.hh  G4HepEmGammaInteractionCompton.icc  G4HepEmGammaInteractionConversion.hh  G4HepEmGammaInteractionConversion.icc  G4HepEmGammaInteractionPhotoelectric.hh  G4HepEmGammaInteractionPhotoelectric.icc  G4HepEmGammaManager.hh  G4HepEmGammaManager.icc  G4HepEmGammaTrack.hh  G4HepEmInteractionUtils.hh  G4HepEmInteractionUtils.icc  G4HepEmLog.hh  G4HepEmMSCTrackData.hh  G4HepEmMacros.hh  G4HepEmMath.hh  G4HepEmPositronInteractionAnnihilation.hh  G4HepEmPositronInteractionAnnihilation.icc  G4HepEmRandomEngine.hh  G4HepEmRunUtils.hh  G4HepEmRunUtils.icc  G4HepEmTLData.hh  G4HepEmTrack.hh
G4HepEm/G4HepEmRun/src/: G4HepEmElectronInteractionBrem.cc  G4HepEmElectronInteractionBremSB.cc  G4HepEmElectronManager.cc  G4HepEmPositronInteractionAnnihilation.cc  G4HepEmRandomEngine.cc  G4HepEmTLData.cc
G4HepEm/include/: G4EmTrackingManager.hh  G4HepEmCLHEPRandomEngine.hh  G4HepEmNoProcess.hh  G4HepEmProcess.hh  G4HepEmRunManager.hh  G4HepEmTrackingManager.hh  HepEmTrackingManager.hh
G4HepEm/src/: G4EmTrackingManager.cc  G4HepEmProcess.cc  G4HepEmRunManager.cc  G4HepEmTrackingManager.cc  HepEmTrackingManager.cc  TrackingManagerHelper.hh  TrackingManagerHelper.icc
apps/examples/TestEm3/: ATLASbar.mac  CMakeLists.txt  TestEm3.cc
apps/examples/TestEm3/include/: Run.hh  (+14 more)
apps/tests/ElectronTargetElementSelector/: CMakeLists.txt  TestElemSelectorData.cc
apps/tests/MaterialAndRelated/: CMakeLists.txt  TestMaterialAndRelated.cc
testing/: CMakeLists.txt
testing/DataImportExport/: CMakeLists.txt  Readme.md  TestDataImportExport.cc
testing/DataImportExport/include/: G4HepEmDataComparison.h  MockG4.h  SimpleFakeG4Setup.h
testing/DataImportExport/src/: MockG4.cc  SimpleFakeG4Setup.cc
testing/DataInitialization/: CMakeLists.txt  Readme.md  TestG4HepEmInit.cc
testing/ElectronEnergyLoss/: CMakeLists.txt  Readme.md  TestEnergyLossData.cc
testing/ElectronEnergyLoss/src/: ELossData.cu  Implementation.cc
testing/ElectronTargetElementSelector/: CMakeLists.txt  Readme.md  TestElemSelectorData.cc
testing/ElectronTargetElementSelector/src/: ElemSelector.cu  Implementation.cc
testing/ElectronXSections/: CMakeLists.txt  Readme.md  TestXSectionData.cc
testing/ElectronXSections/include/: Declaration.hh
testing/ElectronXSections/src/: Implementation.cc  ResMacXSecs.cu
testing/G4HepEmDataInterfaces/: CMakeLists.txt  TestG4HepEmDataInterfaces.cc
testing/GammaTargetElementSelector/: CMakeLists.txt  TestGammaElemSelectorData.cc
testing/GammaTargetElementSelector/include/: Declaration.hh
testing/GammaTargetElementSelector/src/: GammaElemSelector.cu  Implementation.cc
testing/GammaXSections/: CMakeLists.txt  TestGammaXSectionData.cc
testing/GammaXSections/include/: Declaration.hh
testing/GammaXSections/src/: GammaMacXSecs.cu  Implementation.cc
testing/MaterialAndRelated/: CMakeLists.txt  TestMaterialAndRelated.cc
testing/MaterialAndRelated/src/: Implementation.cc  MatCutData.cu  MaterialData.cu
testing/TestUtils/: G4HepEmDataComparison.hh  G4SetUp.cc  G4SetUp.hh  Hist.hh
testing/scripts/actions/: install_geant4.sh
testing/shims/: G4HepEmConfig.cmake
testing/testElectronInteractionBrem/: CMakeLists.txt  testBrem.cc
testing/testElectronInteractionBrem/include/: Declaration.hh  TestBremArgs.hh
testing/testElectronInteractionBrem/src/: Implementation.cc  SBTableData.cu
(+64 files in other folders)
